Fixed spacing problems with icons in sidebar

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,7 +1,7 @@
 :root {
   /* Colors */
   --color-white: rgb(221, 221, 221);
-  --color-black: rgb(27, 33, 43);
+  --color-black: rgb(22, 23, 26);
   --color-light-black: rgb(56, 56, 56);
   --color-accent1: rgb(255, 158, 116);
 
@@ -143,6 +143,15 @@ footer > span {
 
   #sidebarItems > ul > li > a {
     color: var(--color-accent1); 
+  }
+
+  #sidebarIcons {
+    margin-left: 10%;
+  }
+
+  #sidebarIcons > svg {
+    font-size: var(--home-font-size);
+    margin-right: 40px;
   }
 
   #active {
